-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.3
-
None
-
99fd5825dfb4d50cff93165995701a65b7a8e4ed
The selection is drawn incorrectly when selecting a single character in a ligature like fi, ffi, fl in Q[Plain]TextEdit.
When walking over 'ffi', the cursor itself is positioned properly between 'f' and 'f', and 'f', and 'i', but the selection stays in front of the first 'f' until the cursor is behind the 'i'.
The following is sufficient to reproduce the problem on Ubuntu:
#include <QApplication>
#include <QPlainTextEdit>
int main(int argc, char *argv[])
{
QApplication a(argc, argv);
QPlainTextEdit p;
p.show();
return a.exec();
}
The problem is visible in Konqueror, too, but no in, e.g. Nautilus.
The cursor is positioned correctly, so the information is "somewhere" available.